===========
ALTERAÇÕES
===========

v. 1.3.1 beta
=============

- tela de gerenciamento de usuários
- tela de gerenciamento do perfil
- possibilidade de escolher o endereço ip do banco de dados


v. 0.2.2 beta
=============

- permite acesso apenas a logins ativos
- alteração do código da pasta de papel de número para texto
- correções no carregamento das janelas após a primeira inicialização
- correções de pequenas falhas


v. 0.2.1 beta
=============

- reescrita do sistema
- mudança para a interface gráfica nativa do sistema
- remoção do prompt
- uso de log para armazenar mensagens
- cálculo da senha criptografada feita pelo sistema e não mais pelo banco durante o login
- correções de pequenos bugs
- melhoria das tabelas de busca e de dependentes
- remoção do botão imprimir na tela principal


v. 0.1.6 beta
=============

- adição de colunas que armazena os momentos de criação e atualização dos registros
- opção de imprimir ficha do censo com data do recenseamento
- adição de colunas que armazena usuário que criou e editou registro da tabelas de beneficiário e dependentes
- adição da lógica de manipulação das datas e usuários de criação, atualização e recenseamento para os beneficiários e dependentes.
  A lógica de recenseamento é apenas para o beneficiário.
- correção de erro que permitia editar a deficiência do dependente.
- mudança da localização dos componentes de formulário: pai, mãe, estado civil e beneficiário de origem do pensionista
- adição do campo de observações
- informa campos obrigatórios de preenchimento (beneficiário)

