@@ -8,6 +8,7 @@ v. 1.3.1 beta
 - tela de gerenciamento de usuários
 - tela de gerenciamento do perfil
 - possibilidade de escolher o endereço ip do banco de dados
+- solicitação de senha do admin para iniciar censo do ano
 
 
 v. 0.2.2 beta
